--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,13 +58,15 @@ main {
     user-select: none;
 }
 
-.password .text input.font-sm{
+.password .text input.font-sm {
     font-size: 2rem;
 }
-.password .text input.font-xs{
+
+.password .text input.font-xs {
     font-size: 1.5rem;
 }
-.password .text input.font-xxs{
+
+.password .text input.font-xxs {
     font-size: 1rem;
 }
 
@@ -166,7 +168,7 @@ main {
     cursor: pointer;
 }
 
-.checkbox-container{
+.checkbox-container {
     display: block;
     position: relative;
     padding-left: 2rem;
@@ -178,7 +180,7 @@ main {
     user-select: none;
 }
 
-.checkbox-container input{
+.checkbox-container input {
     position: absolute;
     height: 0;
     width: 0;
@@ -186,7 +188,7 @@ main {
     cursor: pointer;
 }
 
-.checkbox-container .checkmark{
+.checkbox-container .checkmark {
     position: absolute;
     top: 0;
     left: 0;
@@ -196,13 +198,15 @@ main {
     transition: all 0.2s;
 }
 
-.checkbox-container:hover input ~ .checkmark {
+.checkbox-container:hover input~.checkmark {
     background-color: #CCC;
 }
-.checkbox-container input:checked ~ .checkmark {
+
+.checkbox-container input:checked~.checkmark {
     background-color: #9b51e0;
 }
-.checkbox-container .checkmark:after{
+
+.checkbox-container .checkmark:after {
     content: "";
     display: none;
     position: absolute;
@@ -215,48 +219,66 @@ main {
     transform: rotate(45deg)
 }
 
-.checkbox-container input:checked ~ .checkmark:after{
+.checkbox-container input:checked~.checkmark:after {
     display: block;
 }
 
-.submit{
+.submit {
     text-align: center;
 }
 
-.submit button{
+.submit button {
     background-color: #bb6bd9;
     font-size: 1.375rem;
-    color:#FFF;
+    color: #FFF;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     padding: 1rem 2rem;
     transition: all 0.2s;
 }
-.submit button:hover{
-background-color: #9b51e0;
+
+.submit button:hover {
+    background-color: #9b51e0;
 }
 
 
-@media only screen and (max-width: 480px){
-    .password{
+@media only screen and (max-width: 480px) {
+    .password {
         padding: 1rem;
     }
-    .password .text input{
+
+    .password .text input {
         font-size: 1.5rem;
     }
-    
-    .password .text input.font-sm{
+
+    .password .text input.font-sm {
         font-size: 1.2rem;
     }
-    .password .text input.font-xs{
+
+    .password .text input.font-xs {
         font-size: 1rem;
     }
-    .password .text input.font-xxs{
+
+    .password .text input.font-xxs {
         font-size: 1rem;
     }
-    .password .actions img{
+
+    .password .actions img {
         width: 24px;
     }
 
+}
+
+footer {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    margin-top: 4rem;
+}
+
+footer .footer-text {
+    flex: 1;
+    font-size: 0.7rem;
 }
